Campfire One Sass

--- a/src/screen.sass
+++ b/src/screen.sass
@@ -7,10 +7,10 @@
 @import compass/reset.sass
 @import partials/fonts.sass
 
-!HIGHLIGHT_COLOR = #d8dbff
+!HIGHLIGHT_COLOR = #555555
 
 body
-  color: white
+  color: #757575
   font-size: 175%
   font-family: "Puritan", "Futura", "Verdana", sans-serif
   background: black
@@ -100,14 +100,14 @@ body
     &.nopadd
       padding: 0
 
-    &.troll
-      background-image= image_url("background_troll.jpg")
+    &.compass
+      background-image= image_url("background.png")
 
     h2
       margin-bottom: 10%
 
     &.intro
-      color: #e3e3e3
+      color: #757575
 
       display: none
       background-image= image_url("background-intro.png")
@@ -121,7 +121,7 @@ body
         font-size: 150%
         position: absolute
         top: 660px
-        color: #b9c949
+        color: #FFB3FF
 
       p
         position: absolute
