Changed author font color

--- a/src/screen.sass
+++ b/src/screen.sass
@@ -121,7 +121,7 @@ body
         font-size: 150%
         position: absolute
         top: 660px
-        color: #FFB3FF
+        color: #CE4DD6
 
       p
         position: absolute
